--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,11 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.3.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router": "^6.26.0",
+    "react-router-dom": "^6.26.0"
   }
 }
