--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,5 +25,8 @@
     "react-dom": "18.3.1",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0"
+  },
+    "resolutions": {
+    "rollup": "npm:@rollup/wasm-node"
   }
 }
