fixed bug with compose in backend and fixes display on search page

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/catalog
-    username: mau
-    password: mau
+    url: jdbc:postgresql://postgresdb:5432/catalog
+    username: catalog_user
+    password: catalog_4432
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
